Add caching group provider and enable for LDAP group provider
This Guice Module can be used to enable caching in the group provider,
by adding it to the list of modules in a Guice context in a group
provider factory, or to any other Guice context as needed.

Features:

* Configurable configuration prefix
* Ability to bind the final `GroupProvider` with a custom binding
  annotation
  * useful especially when the Guice context is not entirely
    isolated and there are other `GroupProvider` bindings in it
* An `@Inject`-able hook for cache invalidation

Author:    Krzysztof Sobolewski <krzysztof.sobolewski@starburstdata.com>
Date:      Tue Jul 11 16:48:28 2023 +0200

Strip out user attribute logic

fix abbreviation

use setup method instead of constructor

remove parameterized test from testGetGroupsWithGroupsFilter

remove parameterized test from testGetGroupForMissingUserReturnsEmpty

remove parameterized test from testGetGroupsWithBadGroupNameReturnsFullName

remove parameterized test from testGetGroupsConcurrently

remove parameterized test from testGetGroups

delete combine and source methods

extract common configBuilders into variables