@@ -13,13 +13,16 @@
  */
 package io.trino.plugin.ldapgroup;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.ObjectArrays;
 import com.google.common.io.Closer;
 import io.trino.spi.security.GroupProvider;
 import io.trino.testing.containers.TestingOpenLdapServer;
 import io.trino.testing.containers.TestingOpenLdapServer.DisposableSubContext;
 import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.parallel.Execution;
@@ -38,7 +41,7 @@ import java.util.concurrent.Executors;
 import java.util.stream.Stream;
 
 import static com.google.common.collect.ImmutableList.toImmutableList;
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.TestInstance.Lifecycle.PER_CLASS;
 import static org.junit.jupiter.api.parallel.ExecutionMode.CONCURRENT;
 
@@ -48,16 +51,38 @@ public class TestLdapGroupProviderIntegration
 {
     private final LdapGroupProviderFactory factory = new LdapGroupProviderFactory();
 
-    private final Closer closer;
+    private Closer closer;
 
-    private final Map<String, String> baseConfig;
+    private Map<String, String> baseConfig;
 
-    private final DisposableSubContext clients;
-    private final DisposableSubContext developers;
-    private final DisposableSubContext qa;
+    ConfigBuilder cacheDisabledWithMemberOf = builder -> builder
+            .put("cache.enabled", "false")
+            .put("ldap.user-member-of-attribute", "memberOf");
 
-    public TestLdapGroupProviderIntegration()
-            throws Exception
+    ConfigBuilder cacheDisabledWithGroupFilter = builder -> builder
+            .put("cache.enabled", "false")
+            .put("ldap.use-group-filter", "true")
+            .put("ldap.group-base-dn", "ou=groups,dc=trino,dc=testldap,dc=com");
+
+    ConfigBuilder cacheEnabledWithMemberOf = builder -> builder
+            .put("cache.enabled", "true")
+            .put("cache.ttl", "5s")
+            .put("cache.maximum-size", "10")
+            .put("ldap.user-member-of-attribute", "memberOf");
+
+    ConfigBuilder cacheEnabledWithGroupFilter = builder -> builder
+            .put("cache.enabled", "true")
+            .put("cache.ttl", "5s")
+            .put("cache.maximum-size", "10")
+            .put("ldap.use-group-filter", "true")
+            .put("ldap.group-base-dn", "ou=groups,dc=trino,dc=testldap,dc=com");
+
+    private DisposableSubContext clients;
+    private DisposableSubContext developers;
+    private DisposableSubContext qa;
+
+    @BeforeAll
+    public void setup() throws Exception
     {
         closer = Closer.create();
         Network network = Network.newNetwork();
@@ -78,17 +103,10 @@ public class TestLdapGroupProviderIntegration
         DisposableSubContext externalGroupsOU = openLdapServer.createOrganization("external", groupsOU);
         DisposableSubContext usersOU = openLdapServer.createOrganization("users");
 
-        DisposableSubContext johnb = openLdapServer.createUser(usersOU, "johnb", ImmutableMap.of(
-                "employeeNumber", "1000",
-                "mail", "johnb@company.com"));
-        DisposableSubContext alicea = openLdapServer.createUser(usersOU, "alicea", ImmutableMap.of(
-                "employeeNumber", "1001",
-                "mail", "alicea@trino.io",
-                "givenname", "Alice"));
-        DisposableSubContext bobq = openLdapServer.createUser(usersOU, "bobq", ImmutableMap.of(
-                "employeeNumber", "1002"));
-        openLdapServer.createUser(usersOU, "carlp", ImmutableMap.of(
-                "employeeNumber", "1003"));
+        DisposableSubContext johnb = openLdapServer.createUser(usersOU, "johnb", "");
+        DisposableSubContext alicea = openLdapServer.createUser(usersOU, "alicea", "");
+        DisposableSubContext bobq = openLdapServer.createUser(usersOU, "bobq", "");
+        openLdapServer.createUser(usersOU, "carlp", "");
 
         clients = openLdapServer.createGroup(externalGroupsOU, "clients");
         openLdapServer.addUserToGroup(johnb, clients);
@@ -109,44 +127,51 @@ public class TestLdapGroupProviderIntegration
         closer.close();
     }
 
-    @ParameterizedTest
-    @MethodSource("provideUsersAndExpectedGroups")
-    public void testGetGroups(ConfigBuilder configBuilder, String userName, Set<String> expectedGroups)
+    @Test
+    public void testGetGroups()
+    {
+        assertGetGroups(cacheDisabledWithMemberOf, "alicea", ImmutableSet.of("clients", "developers", "qa"));
+        assertGetGroups(cacheDisabledWithMemberOf, "johnb", ImmutableSet.of("clients"));
+        assertGetGroups(cacheDisabledWithMemberOf, "bobq", ImmutableSet.of("qa"));
+        assertGetGroups(cacheDisabledWithMemberOf, "carlp", ImmutableSet.of());
+        assertGetGroups(cacheDisabledWithGroupFilter, "alicea", ImmutableSet.of("clients", "developers", "qa"));
+        assertGetGroups(cacheDisabledWithGroupFilter, "johnb", ImmutableSet.of("clients"));
+        assertGetGroups(cacheDisabledWithGroupFilter, "bobq", ImmutableSet.of("qa"));
+        assertGetGroups(cacheDisabledWithGroupFilter, "carlp", ImmutableSet.of());
+        assertGetGroups(cacheEnabledWithMemberOf, "alicea", ImmutableSet.of("clients", "developers", "qa"));
+        assertGetGroups(cacheEnabledWithMemberOf, "johnb", ImmutableSet.of("clients"));
+        assertGetGroups(cacheEnabledWithMemberOf, "bobq", ImmutableSet.of("qa"));
+        assertGetGroups(cacheEnabledWithMemberOf, "carlp", ImmutableSet.of());
+        assertGetGroups(cacheEnabledWithGroupFilter, "alicea", ImmutableSet.of("clients", "developers", "qa"));
+        assertGetGroups(cacheEnabledWithGroupFilter, "johnb", ImmutableSet.of("clients"));
+        assertGetGroups(cacheEnabledWithGroupFilter, "bobq", ImmutableSet.of("qa"));
+        assertGetGroups(cacheEnabledWithGroupFilter, "carlp", ImmutableSet.of());
+    }
+
+    private void assertGetGroups(ConfigBuilder configBuilder, String userName, Set<String> expectedGroups)
     {
         Map<String, String> config = configBuilder.apply(ImmutableMap.<String, String>builder().putAll(baseConfig)).buildOrThrow();
         GroupProvider groupsProvider = factory.create(config);
 
         Set<String> groups = groupsProvider.getGroups(userName);
 
-        assertEquals(expectedGroups, groups);
+        assertThat(groups).containsAll(expectedGroups);
     }
 
-    @ParameterizedTest
-    @MethodSource("provideForTestGetGroupsAndUserAttributes")
-    public void testGetGroupsWithUserAttributes(
-            ConfigBuilder configBuilder,
-            String userName,
-            String searchAttribute,
-            Set<String> expectedGroups)
+    @Test
+    public void testGetGroupsWithGroupsFilter()
     {
-        Map<String, String> config = configBuilder.apply(
-                ImmutableMap.<String, String>builder()
-                    .putAll(baseConfig)
-                    .put("ldap.user-search-attributes", searchAttribute))
-                .buildOrThrow();
-        GroupProvider groupsProvider = factory.create(config);
-
-        Set<String> groups = groupsProvider.getGroups(userName);
-
-        assertEquals(expectedGroups, groups);
+        assertGetGroupsWithGroupsFilter("alicea", "cn=*", ImmutableSet.of("clients", "developers", "qa"));
+        assertGetGroupsWithGroupsFilter("alicea", "cn=dev*", ImmutableSet.of("developers"));
+        assertGetGroupsWithGroupsFilter("alicea", "(|(cn=dev*)(cn=cl*))", ImmutableSet.of("developers", "clients"));
+        assertGetGroupsWithGroupsFilter("alicea", "(&(objectclass=groupOfNames)(!(ou:dn:=external)))", ImmutableSet.of("developers", "qa"));
     }
 
-    @ParameterizedTest
-    @MethodSource("provideForTestGetGroupsWithGroupsFilter")
-    public void testGetGroupsWithGroupsFilter(String userName, String groupFiler, Set<String> expectedGroups)
+    private void assertGetGroupsWithGroupsFilter(String userName, String groupFiler, Set<String> expectedGroups)
     {
         Map<String, String> config = ImmutableMap.<String, String>builder()
                 .putAll(baseConfig)
+                .put("ldap.use-group-filter", "true")
                 .put("ldap.group-search-member-attribute", "member")
                 .put("ldap.group-name-attribute", "cn")
                 .put("ldap.group-base-dn", "ou=groups,dc=trino,dc=testldap,dc=com")
@@ -156,12 +181,19 @@ public class TestLdapGroupProviderIntegration
 
         Set<String> groups = groupsProvider.getGroups(userName);
 
-        assertEquals(expectedGroups, groups);
+        assertThat(groups).containsAll(expectedGroups);
     }
 
-    @ParameterizedTest
-    @MethodSource("provideConfigBuilders")
-    public void testGetGroupForMissingUserReturnsEmpty(ConfigBuilder configBuilder)
+    @Test
+    public void testGetGroupForMissingUserReturnsEmpty()
+    {
+        assertGetGroupForMissingUserReturnsEmpty(cacheEnabledWithMemberOf);
+        assertGetGroupForMissingUserReturnsEmpty(cacheDisabledWithGroupFilter);
+        assertGetGroupForMissingUserReturnsEmpty(cacheEnabledWithMemberOf);
+        assertGetGroupForMissingUserReturnsEmpty(cacheEnabledWithGroupFilter);
+    }
+
+    private void assertGetGroupForMissingUserReturnsEmpty(ConfigBuilder configBuilder)
     {
         Map<String, String> config = configBuilder.apply(
                 ImmutableMap.<String, String>builder()
@@ -171,7 +203,7 @@ public class TestLdapGroupProviderIntegration
 
         Set<String> groups = groupsProvider.getGroups("wrong-user-name");
 
-        assertEquals(Set.of(), groups);
+        assertThat(groups).isEmpty();
     }
 
     @Test
@@ -179,6 +211,7 @@ public class TestLdapGroupProviderIntegration
     {
         Map<String, String> config = ImmutableMap.<String, String>builder()
                 .putAll(baseConfig)
+                .put("ldap.use-group-filter", "true")
                 .put("ldap.group-search-member-attribute", "some-attribute-that-does-not-exist")
                 .put("ldap.group-name-attribute", "cn")
                 .put("ldap.group-base-dn", "ou=groups,dc=trino,dc=testldap,dc=com")
@@ -187,12 +220,18 @@ public class TestLdapGroupProviderIntegration
 
         Set<String> groups = groupsProvider.getGroups("alicea");
 
-        assertEquals(Set.of(), groups);
+        assertThat(groups).isEmpty();
     }
 
-    @ParameterizedTest
-    @MethodSource("provideConfigBuilders")
-    public void testGetGroupsWithBadGroupNameReturnsFullName(ConfigBuilder configBuilder)
+    @Test
+    public void testGetGroupsWithBadGroupNameReturnsFullName() {
+        assertGetGroupsWithBadGroupNameReturnsFullName(cacheDisabledWithMemberOf);
+        assertGetGroupsWithBadGroupNameReturnsFullName(cacheDisabledWithGroupFilter);
+        assertGetGroupsWithBadGroupNameReturnsFullName(cacheEnabledWithMemberOf);
+        assertGetGroupsWithBadGroupNameReturnsFullName(cacheEnabledWithGroupFilter);
+    }
+
+    private void assertGetGroupsWithBadGroupNameReturnsFullName(ConfigBuilder configBuilder)
     {
         Map<String, String> config = configBuilder.apply(
                 ImmutableMap.<String, String>builder()
@@ -203,28 +242,18 @@ public class TestLdapGroupProviderIntegration
 
         Set<String> groups = groupsProvider.getGroups("alicea");
 
-        assertEquals(Set.of(clients.getDistinguishedName(), developers.getDistinguishedName(), qa.getDistinguishedName()), groups);
+        assertThat(groups).containsAll(ImmutableSet.of(clients.getDistinguishedName(), developers.getDistinguishedName(), qa.getDistinguishedName()));
     }
 
-    @ParameterizedTest
-    @MethodSource("provideConfigBuilders")
-    public void testGetGroupIgnoresMissingUserAttributes(ConfigBuilder configBuilder)
-    {
-        Map<String, String> config = configBuilder.apply(
-                ImmutableMap.<String, String>builder()
-                    .putAll(baseConfig)
-                    .put("ldap.user-search-attributes", "employeeNumber,address"))
-                .buildOrThrow();
-        GroupProvider groupsProvider = factory.create(config);
-
-        Set<String> groups = groupsProvider.getGroups("carlp");
-
-        assertEquals(Set.of("employeeNumber=1003"), groups);
+    @Test
+    public void testGetGroupsConcurrently() throws InterruptedException {
+        assertGetGroupsConcurrently(cacheDisabledWithMemberOf);
+        assertGetGroupsConcurrently(cacheDisabledWithGroupFilter);
+        assertGetGroupsConcurrently(cacheEnabledWithMemberOf);
+        assertGetGroupsConcurrently(cacheEnabledWithGroupFilter);
     }
 
-    @ParameterizedTest
-    @MethodSource("provideConfigBuilders")
-    public void testGetGroupsConcurrently(ConfigBuilder configBuilder)
+    private void assertGetGroupsConcurrently(ConfigBuilder configBuilder)
             throws InterruptedException
     {
         Map<String, String> config = configBuilder.apply(
@@ -237,73 +266,26 @@ public class TestLdapGroupProviderIntegration
         CountDownLatch latch = new CountDownLatch(4);
 
         CompletableFuture.supplyAsync(() -> groupsProvider.getGroups("alicea"), executor).whenComplete((g, t) -> {
-            assertEquals(g, Set.of("clients", "qa", "developers"));
+            assertThat(g).containsAll(ImmutableSet.of("clients", "qa", "developers"));
             latch.countDown();
         });
 
         CompletableFuture.supplyAsync(() -> groupsProvider.getGroups("bobq"), executor).whenComplete((g, t) -> {
-            assertEquals(g, Set.of("qa"));
+            assertThat(g).containsAll(ImmutableSet.of("qa"));
             latch.countDown();
         });
 
         CompletableFuture.supplyAsync(() -> groupsProvider.getGroups("johnb"), executor).whenComplete((g, t) -> {
-            assertEquals(g, Set.of("clients"));
+            assertThat(g).containsAll(ImmutableSet.of("clients"));
             latch.countDown();
         });
 
         CompletableFuture.supplyAsync(() -> groupsProvider.getGroups("carlp"), executor).whenComplete((g, t) -> {
-            assertEquals(g, Set.of());
+            assertThat(g).isEmpty();
             latch.countDown();
         });
 
         latch.await();
-    }
-
-    private static Stream<Arguments> combineArgumentStreams(Stream<Arguments> left, Stream<Arguments> right)
-    {
-        List<Arguments> rightArguments = right.collect(toImmutableList());
-        return left.flatMap(l -> rightArguments.stream().map(r -> () -> ObjectArrays.concat(l.get(), r.get(), Object.class)));
-    }
-
-    private static Stream<Arguments> provideConfigBuilders()
-    {
-        return Stream.<ConfigBuilder>of(
-                (builder) -> builder.put("ldap.user-member-of-attribute", "memberOf"),
-                (builder) -> builder.put("ldap.group-base-dn", "ou=groups,dc=trino,dc=testldap,dc=com"))
-                .map(Arguments::of);
-    }
-
-    private static Stream<Arguments> provideUsersAndExpectedGroups()
-    {
-        return combineArgumentStreams(provideConfigBuilders(), Stream.of(
-                Arguments.of("alicea", Set.of("clients", "developers", "qa")),
-                Arguments.of("johnb", Set.of("clients")),
-                Arguments.of("bobq", Set.of("qa")),
-                Arguments.of("carlp", Set.of())));
-    }
-
-    private static Stream<Arguments> provideForTestGetGroupsAndUserAttributes()
-    {
-        return combineArgumentStreams(provideConfigBuilders(), Stream.of(
-                Arguments.of("alicea", "employeeNumber,mail", Set.of(
-                        "clients",
-                        "developers",
-                        "qa",
-                        "employeeNumber=1001",
-                        "mail=alicea@trino.io")),
-                Arguments.of("alicea", "givenname", Set.of("clients", "developers", "qa", "givenname=Alice")),
-                Arguments.of("bobq", "employeeNumber,,mail", Set.of("qa", "employeeNumber=1002")),
-                Arguments.of("johnb", "employeeNumber,mail", Set.of("clients", "employeeNumber=1000", "mail=johnb@company.com")),
-                Arguments.of("carlp", "employeeNumber,mail", Set.of("employeeNumber=1003"))));
-    }
-
-    private static Stream<Arguments> provideForTestGetGroupsWithGroupsFilter()
-    {
-        return Stream.of(
-                Arguments.of("alicea", "cn=*", Set.of("clients", "developers", "qa")),
-                Arguments.of("alicea", "cn=dev*", Set.of("developers")),
-                Arguments.of("alicea", "(|(cn=dev*)(cn=cl*))", Set.of("developers", "clients")),
-                Arguments.of("alicea", "(&(objectclass=groupOfNames)(!(ou:dn:=external)))", Set.of("developers", "qa")));
     }
 
     @FunctionalInterface
